--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "graphql": "^14.5.8",
     "nodemon": "^1.19.3",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-instagram": "^1.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
